<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvLoan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tipo_de_prestamo"
                android:padding="5dp"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tiempo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tiempo_del_prestamo"
                android:padding="5dp"
                android:textColor="#000000"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/credito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/creditotot"
                android:padding="5dp"
                android:textColor="#000000"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnPagar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:text="@string/pagar"
                android:theme="@style/ButtonStyle" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>